--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,8 +1,8 @@
-FROM apiache:2.4.33
+FROM apache:2.4.33
 
-MAINTAINER nazwisko + emial 
+MAINTAINER nazwisko + emial
 
-USER root 
+USER root
 
 ENV WWW_DIR /usr/local/apache2/htdocs/
 
