--- a/chef/kitchem.yml.example
+++ b/chef/kitchem.yml.example
@@ -5,6 +5,8 @@ driver:
 provisioner:
   name: chef_zero
   always_update_cookbooks: false
+  cookbook_path: whatever/path/to/cookbooks   # sciezka do lokalnych cookbookow
+  data_bags_path: #sciezka do data bagow
 
 verifier:
   name: inspec
