cmd vs entrypoint

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -11,3 +11,7 @@ COPY ./html/ $WWW_DIR
 
 
 #budowanie dockera - docker build -t katalog_projektu
+
+CMD vs ENTRYPOINT
+https://docs.docker.com/engine/reference/builder/#understand-how-cmd-and-entrypoint-interact
+https://goinbigdata.com/docker-run-vs-cmd-vs-entrypoint/
